--- a/custom_components/webasto_next_modbus/translations/en.json
+++ b/custom_components/webasto_next_modbus/translations/en.json
@@ -180,6 +180,12 @@
       "powerboard_firmware": {
         "name": "Powerboard Firmware"
       },
+      "mac_address_ethernet": {
+        "name": "MAC Address (LAN)"
+      },
+      "mac_address_wifi": {
+        "name": "MAC Address (WLAN)"
+      },
       "plug_cycles": {
         "name": "Plug Cycles"
       },
