fix: charged energy register size and active errors translation

--- a/custom_components/webasto_next_modbus/translations/de.json
+++ b/custom_components/webasto_next_modbus/translations/de.json
@@ -168,7 +168,10 @@
         "name": "Spannung L3"
       },
       "active_errors": {
-        "name": "Aktive Fehler"
+        "name": "Aktive Fehler",
+        "state": {
+          "ok": "Keine Fehler"
+        }
       }
     },
     "text": {
