--- a/custom_components/webasto_next_modbus/translations/en.json
+++ b/custom_components/webasto_next_modbus/translations/en.json
@@ -196,7 +196,10 @@
         "name": "Voltage L3"
       },
       "active_errors": {
-        "name": "Active Errors"
+        "name": "Active Errors",
+        "state": {
+          "ok": "No Error"
+        }
       }
     },
     "text": {
